--- a/trunk/configs/templates/MI-MINI.config
+++ b/trunk/configs/templates/MI-MINI.config
@@ -31,7 +31,7 @@ CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Kernel driver select for WiFi AP 5GHz
 ### 3.0 = MT7612E v3.0.4.0
-CONFIG_FIRMWARE_WIFI5_DRIVER=3.0
+###CONFIG_FIRMWARE_WIFI5_DRIVER=3.0
 
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
@@ -67,7 +67,7 @@ CONFIG_FIRMWARE_ENABLE_FUSE=y
 CONFIG_FIRMWARE_ENABLE_SWAP=n
 
 ### Include UVC camera modules. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_UVC=y
+CONFIG_FIRMWARE_INCLUDE_UVC=n
 
 ### Include USB-HID modules. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_HID=n
@@ -76,7 +76,7 @@ CONFIG_FIRMWARE_INCLUDE_HID=n
 CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include USB-Audio modules ~0.46MB
-CONFIG_FIRMWARE_INCLUDE_AUDIO=y
+CONFIG_FIRMWARE_INCLUDE_AUDIO=n
 
 ### Include network QoS scheduling modules. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_QOS=n
@@ -125,7 +125,7 @@ CONFIG_FIRMWARE_INCLUDE_NTFS_3G=n
 CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
-CONFIG_FIRMWARE_INCLUDE_U2EC=y
+CONFIG_FIRMWARE_INCLUDE_U2EC=n
 
 ### Include "tcpdump" utility. ~0.6MB
 CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
@@ -185,7 +185,7 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+CONFIG_FIRMWARE_INCLUDE_XUPNPD=n
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=n
@@ -194,23 +194,23 @@ CONFIG_FIRMWARE_INCLUDE_MINIDLNA=n
 CONFIG_FIRMWARE_INCLUDE_FIREFLY=n
 
 ### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna and Firefly. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
+CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=n
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=n
+CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=n
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
-CONFIG_FIRMWARE_INCLUDE_ARIA=y
+CONFIG_FIRMWARE_INCLUDE_ARIA=n
 
 ### Include Aria2 WEB control. ~0.7MB
-CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
+CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=n
 
 CONFIG_FIRMWARE_INCLUDE_CURL=y
 
-CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT=y
+CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT=n
 
 CONFIG_FIRMWARE_INCLUDE_GDUT_DRCOM=n
 
@@ -218,11 +218,11 @@ CONFIG_FIRMWARE_INCLUDE_DOGCOM=y
 
 CONFIG_FIRMWARE_INCLUDE_MINIEAP=y
 
-CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=y
+CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=n
 
 CONFIG_FIRMWARE_INCLUDE_NAPT66=y
 
-CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
+CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=n
 
 CONFIG_FIRMWARE_INCLUDE_SSSERVER=n
 
@@ -232,9 +232,9 @@ CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n
 
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n
 
-CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=y
+CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=n
 
-CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
+CONFIG_FIRMWARE_INCLUDE_VLMCSD=n
 
 CONFIG_FIRMWARE_INCLUDE_TTYD=y
 
@@ -256,7 +256,7 @@ CONFIG_FIRMWARE_INCLUDE_SOCAT=y
 
 CONFIG_FIRMWARE_INCLUDE_SRELAY=y
 
-CONFIG_FIRMWARE_INCLUDE_MENTOHUST=y
+CONFIG_FIRMWARE_INCLUDE_MENTOHUST=n
 
 CONFIG_FIRMWARE_INCLUDE_FRPC=n
 
