--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,11 +2,17 @@ name: CI
 
 # Controls when the action will run. 
 on: 
-  push:
-  pull_request:
-  workflow_dispatch:
   release:
     types: [published]
+  push:
+    tags:
+    - 'v*'
+  #  branches: 
+  #    - master
+#  schedule:
+#    - cron: 0 8 * * 5
+  watch:
+    types: [started]
 
 env:
   toolchain_pkg: mipsel-linux-uclibc.tar.xz
@@ -25,13 +31,13 @@ jobs:
       matrix:
         include:
           - build_variant: "mt7620"
-            targets: "PSG1208 PSG1218 NEWIFI-MINI MI-MINI MI-3 OYE-001 5K-W20"
-          - build_variant: "mt7628"
-            targets: "HC5861B MI-NANO MZ-R13 MZ-R13P 360P2 HC5761A HC5661A"
-          - build_variant: "mt7621"
-            targets: "K2P_nano K2P_nano-5.0 K2P-5.0 DIR-878-5.0 RM2100"
-          - build_variant: "mt7621-usb"
-            targets: "JCG-836PRO-5.0 JCG-AC860M-5.0 JCG-Y2-5.0 DIR-882-5.0 A3004NS MSG1500 WR1200JS MI-R3G NEWIFI3 B70"
+            targets: "MI-MINI"
+          #- build_variant: "mt7628"
+           # targets: "HC5861B MI-NANO MZ-R13 MZ-R13P 360P2 HC5761A HC5661A"
+          #- build_variant: "mt7621"
+            #targets: "K2P_nano K2P_nano-5.0 K2P-5.0 DIR-878-5.0 RM2100"
+          #- build_variant: "mt7621-usb"
+            #targets: "JCG-836PRO-5.0 JCG-AC860M-5.0 JCG-Y2-5.0 DIR-882-5.0 A3004NS MSG1500 WR1200JS MI-R3G NEWIFI3 B70"
     steps:
       - uses: actions/checkout@v2
       - name: Prepare environment
