--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,14 +30,14 @@ jobs:
     strategy:
       matrix:
         include:
-          - build_variant: "mt7620"
-            targets: "MI-MINI"
+          #- build_variant: "mt7620"
+           # targets: "MI-MINI"
           #- build_variant: "mt7628"
            # targets: "HC5861B MI-NANO MZ-R13 MZ-R13P 360P2 HC5761A HC5661A"
           #- build_variant: "mt7621"
             #targets: "K2P_nano K2P_nano-5.0 K2P-5.0 DIR-878-5.0 RM2100"
-          #- build_variant: "mt7621-usb"
-            #targets: "JCG-836PRO-5.0 JCG-AC860M-5.0 JCG-Y2-5.0 DIR-882-5.0 A3004NS MSG1500 WR1200JS MI-R3G NEWIFI3 B70"
+          - build_variant: "mt7621-usb"
+            targets: "JCG-836PRO-5.0 JCG-AC860M-5.0 JCG-Y2-5.0 DIR-882-5.0 A3004NS MSG1500 WR1200JS MI-R3G NEWIFI3 B70"
     steps:
       - uses: actions/checkout@v2
       - name: Prepare environment
