--- a/trunk/.config
+++ b/trunk/.config
@@ -3,7 +3,7 @@ CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=RT3883
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="liyixx/rt-n56u"
+CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 
 ### Linux kernel and toolchain
 CONFIG_LINUXDIR=linux-3.4.x
